# boiler-draft-helper

./: .gitignore  README.md  analysis_results.txt  feature_engineering.py  main.py  optimize.py  optimize_test.py  pyproject.toml  requirements.txt  run_mpc.py  train.py  train_narx.py  train_prob_narx.py  train_proxy.py  train_transformer.py
logs/: boiler-draft-helper_daily.log.2026-03-05  boiler-draft-helper_daily.log.2026-03-06  boiler-draft-helper_daily.log.2026-03-07  boiler-draft-helper_daily.log.2026-03-09
notebooks/:  feature_extraction_validation.ipynb  data_analysis.ipynb  predict_check.ipynb
src/: __init__.py  data_loader.py  data_quality.py  event_period_cleaner.py  logger.py
src/analysis/: __init__.py  delay_analyzer.py  eda.py  visualization.py
src/config/: __init__.py  constraints.py  hyperparams.py  variables.py
src/features/: __init__.py  base.py  extractor.py  selector.py
src/modeling/: __init__.py  lstm.py  narx_lstm.py  narx_lstm_improved.py  optimization.py  physics_loss.py  pinn_proxy.py  prob_narx.py  prob_narx_mpc.py  transformer.py
src/mpc/: __init__.py  controller.py  optimizer.py  safety_monitor.py
src/predictor/: __init__.py  config.py  dataset.py  loss.py  model.py  optimizer.py  train.py  trainer.py  utils.py  weight_tuning.py
src/utils/: __init__.py  config.py  logger.py  utils.py
